Added swagger documentation fuel
